--- a/LiterAlura/pom.xml
+++ b/LiterAlura/pom.xml
@@ -60,6 +60,17 @@
 				<artifactId>hibernate-core</artifactId>
 				<version>5.6.16.Final</version>
 			</dependency>
+		<dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>2.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.15.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
